modify text in abstract

--- a/uw-ethesis-frontpgs.tex
+++ b/uw-ethesis-frontpgs.tex
@@ -73,7 +73,7 @@ I understand that my thesis may be made electronically available to the public.
 
 \begin{center}\textbf{Abstract}\end{center}
 
-Software projects make use of libraries extensively. Libraries have intended API surfaces—sets of exposed library interfaces that library developers expect clients to use. However, in practice, clients only use small fractions of intended API surfaces of libraries. Clients also sometimes use libraries in unexpected ways. We have implemented a tool to study both static and dynamic interactions between clients, the libraries they use, and those libraries’ transitive dependencies. We present a detailed study on different API usage patterns. We then present applications of this work—a visualization tool and library fission. Another application, by client developers, is to answer a query about upstream code: will their code be affected by breaking changes in library APIs? Additionally, library developers can find out about downstream code: which APIs in their source code are commonly used by clients? 
+Software projects make use of libraries extensively. Libraries have intended API surfaces—sets of exposed library interfaces that library developers expect clients to use. However, in practice, clients only use small fractions of intended API surfaces of libraries. Clients also use libraries in unexpected ways sometimes. Observing usage patterns of library APIs by clients is beneficial to both client and library developers, in terms of version upgrades, breaking changes and software bloating. We have implemented a tool to study both static and dynamic interactions between clients, the libraries they use, and those libraries’ direct dependencies. We present a detailed study on different API usage patterns. We then present applications of this work—a visualization tool, VizAPI and case studies of library fission. An example use case for client developers, is to answer a query about upstream code: will their code be affected by breaking changes in library APIs? Additionally, library developers can find out about downstream code: which APIs in their source code are commonly used by clients? 
 
 \cleardoublepage
 
