--- a/usage-scenarios.tex
+++ b/usage-scenarios.tex
@@ -2,6 +2,8 @@
 \chapter{Applications}
 %======================================================================
 \section{Visualization}
+\label{sec:visualization}
+
 \begin{figure}[h]
 \begin{center}
 \includegraphics[height=6cm]{images/intro-example.png}
