--- a/introduction.tex
+++ b/introduction.tex
@@ -17,7 +17,7 @@ So, components are revolutionary but bring new problems. Let's consider one prob
 
 As a second problem, consider the detection of vulnerabilities in dependencies. Detection is relatively straight-forward: compute the transitive closure of all dependencies, and cross-reference the transitive dependencies with vulnerability databases like CVEs. Tools like \textit{snyk} and \textit{dependabot} are based on this general idea. Some languages and build systems like npm have built-in language-specific support (\textit{npm audit}). The problem is again precision---listing something as a dependency does not mean that all of its functionality is used. So, if dependencies are sufficiently large and deep, a conservative approach inevitably results in false positives. Indeed, Elizalde Zapata et al~\cite{elizalde18:_towar_smoot_librar_migrat} found that 73\% of their studied clients with theoretically vulnerable dependencies were not actually at risk from CVEs in those dependencies, and Chinthanet et al~\cite{chinthanet20:_code_based_vulner_detec_node} implemented a code-based vulnerability detection tool for Node.js applications. Like the boy who cried wolf, false positives can lead to a potentially devastating impact on application security when true positives start being ignored, as demonstrated in the infamous Equifax incident~\cite{luszcz2018apache}. Sadowski et al~\cite{sadowski2018lessons}, among others, also cite the necessity for low false positive rates in developer tools.
 
-Our research aims to explore the following questions: is the API surface huge in practice? How much of it is actually used and in what ways is it used? Ought we better control component use? What are some ways to do so? We study component usage and explore its usefulness in this work.
+We study component usage and explore its usefulness in this work. Specifically, our research aims to explore the following questions: is the API surface huge in practice? How much of it is actually used and in what ways is it used? Ought we better control component use? What are some ways to do so? 
 
 \section{Contributions}
 \label{sec:contributions}
@@ -25,11 +25,9 @@ Our research aims to explore the following questions: is the API surface huge in
 The contributions of this work include:
 \begin{itemize}
 \item a tool to record both static and dynamic interactions between clients, the libraries they use, and those libraries’ direct dependencies
-\item a detailed study of API usage patterns on 70 clients and 10 libraries
+\item a detailed empirical study of API usage patterns on 10 libraries and 90 clients 
 \item VizAPI, a tool which presents visualization of API usage information
 \item a case study on the concept of library fission
 \end{itemize}
 
-Our tool collects static information and also instruments Java code to collect dynamic instrumentation data about API uses in practice.This includes different patterns of interactions across components, such as vanilla invocations, field usage, annotation usage, subtyping, dynamic proxies, reflective calls and service loaders. We aim to empirically evaluate how developers access libraries in practice, so that we (and others) can develop tools to helpdevelopers achieve more stability. VizAPI presents this information about API uses in practice as a d3 visualization, which can be useful to component developers when they want to introspect about their software. 
-
-
+Our tool collects static information and also instruments Java code to collect dynamic instrumentation data about API uses in practice. This includes different patterns of interactions across components, such as vanilla invocations, field usage, annotation usage, subtyping, dynamic proxies, reflective calls and service loaders. Using the tool's output, we empirically study how developers access libraries in practice, so that we (and others) can develop tools to help developers achieve more stability. We conduct our study on a corpus of 10 open-source libraries and 90 clients. Our visualization tool, VizAPI, presents this information about API uses in practice as a d3 visualization, which can be useful to component developers when they want to introspect about their software. We also apply the API usage information to explore the concept of library fission. We define library fission as splitting up a component into smaller sub-modules. The possible advantages of library fission includes lesser chances of breaking changes in clients of the library. It also means lesser chances of vulnerabilities and version conflicts introduced through dependencies.
