--- a/uw-ethesis.bib
+++ b/uw-ethesis.bib
@@ -681,3 +681,23 @@ series = {MSR '18}
   month =     {January},
   year =      2004,
   note =      {\url{https://martinfowler.com/articles/injection.html}. Accessed 22 October 2021}}
+
+  
+@InProceedings{latoza11:_visual_call_graph,
+  author =       {Thomas D. LaToza and Brad A. Myers},
+  title =        {Visualizing Call Graphs},
+  booktitle = {VL/HCC},
+  year =      2011,
+  month =     {September}}
+
+@INPROCEEDINGS{kula14:_visual_evolut_system_their_librar_depen,
+  author={Kula, Raula Gaikovina and De Roover, Coen and German, Daniel and Ishio, Takashi and Inoue, Katsuro},
+  booktitle={VISSOFT}, 
+  title={Visualizing the Evolution of Systems and Their Library Dependencies}, 
+  year=2014}
+
+@INPROCEEDINGS{bergel14:_domain_specif_languag_visual_softw_depen_graph,
+  author={Bergel, Alexandre and Maass, Sergio and Ducasse, Stéphane and Girba, Tudor},
+  booktitle={VISSOFT}, 
+  title={A Domain-Specific Language for Visualizing Software Dependencies as a Graph}, 
+  year=2014}
